tests/models/struct/usize/fail/expected.rs
use dade::model;
#[model]
struct TestModel {
    #[field(expected = "value")]
    value: usize,
}
fn main() {}
